--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Construction & Engineering Services">
+  <meta name="author" content="Micheal Xavier">
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+  <title>Jehovah Jireh's - Construction & Engineering Services</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -17,15 +17,22 @@
 
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/hebrew.css" rel="stylesheet">
 
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <div class="container">
+        
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Jehovah Jireh's</a>
+
+      <div class="text-center" style="flex:0px;">
+      
+          <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
+  
+      </div>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -33,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#services">Services</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
@@ -51,10 +58,10 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
+      <img class="masthead-avatar mb-5" src="img/icons8-cross-blue-red.svg" alt="Jesus-logo" style="border-radius: 10px;">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+      <h1 class="masthead-heading text-uppercase mb-0"><span xml:lang="he" lang="he" class="ezra">יהוה יראה</span></h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -66,17 +73,17 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
-
+      <p class="masthead-subheading font-weight-light mb-0"><h1>ஆண்டவரே, வீட்டைக் கட்டினாலொழிய, அதைக் கட்டுபவர்களின் உழைப்பெல்லாம் வீணே</h1></p>
+      <p class="masthead-subheading font-weight-light mb-0"><h3>(சங்கீதம் 127:1)</h3></p>
     </div>
   </header>
 
-  <!-- Portfolio Section -->
-  <section class="page-section portfolio" id="portfolio">
+  <!-- Services Section -->
+  <section class="page-section portfolio" id="services">
     <div class="container">
 
-      <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+      <!-- Services Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Services</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom">
@@ -274,8 +281,8 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+          <p class="lead mb-0">7/200 Rajagopalapuram 2nd Street
+            <br>Moulivakkam, Chennai - 600125</p>
         </div>
 
         <!-- Footer Social Icons -->
@@ -309,7 +316,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Your Website 2019</small>
+      <small>Copyright &copy; Jehovan Jireh's 2019</small>
     </div>
   </section>
 
