--- a/index.html
+++ b/index.html
@@ -543,9 +543,40 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/renovation_work.jpg" alt="Renovation Work">
-                <!-- Portfolio Modal - Text -->
+                <div id="carouselRenovationIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselRenovationIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselRenovationIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselRenovationIndicators" data-slide-to="2"></li>
+                      <li data-target="#carouselRenovationIndicators" data-slide-to="3"></li>
+                      <li data-target="#carouselRenovationIndicators" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Building.jpg" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_LivingRoom.jpg" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Kitchen.jpg" alt="Third slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Dinning_Room.jpg" alt="Fourth slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Bathroom.jpg" alt="Fifth slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselRenovationIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselRenovationIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
