New Changes to site
New Changes to site

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/renovation_work.jpg" alt="Renovation Work">
+            <img class="img-fluid" src="img/portfolio/Renovation_House_Home.jpg" alt="Renovation Work">
           </div>
         </div>
 
@@ -194,10 +194,10 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          <p class="lead">Michael Xavier.G (B.TECH CIVIL),<br /> has construction experience for morethan 15 years and doing collective business with my father</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          <p class="lead">Phone : 7374134406 <br /> Gmail : jehovahjirehces@gmail.com</p>
         </div>
       </div>
 
@@ -301,14 +301,12 @@
             <i class="fab fa-fw fa-dribbble"></i>
           </a>
         </div>
-
         <!-- Footer About Text -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by
-            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+          <h4 class="text-uppercase mb-4">Jehovah Jireh's Civil Engineering Services</h4>
+          <p class="lead mb-0">Our services is to provide high quality of building works and which will stays for generations. 
+          </p>
         </div>
-
       </div>
     </div>
   </footer>
@@ -356,14 +354,13 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/plan_estimation.png" alt="Plan Estimation">
                 <!-- Portfolio Modal - Text -->
                 
-                <ol class="mb-5" style="text-align: left;">
-                  <li>We will determine your <b>Floor Plans</b></li>
-                  <li>Give you an idea of your Home <b>Construction Costs</b> Per Square Foot</li>
-                  <li>Style, Quality and Features based on your <b>Environment</b> to accomodate in your Budget</li>
-                  <li><b>Cost Estimation</b> for Water,Electricity and Interior and Exterior Designs</li>
-                  <li>Proactively shares the expenditure details in certain duration to <b>Avoid Cost Overruns</b></li>
-                </ol>
-                
+                <p class="mb-5" style="text-align: left;text-indent: 5em;">
+                  We will plan and estimate for the entire project with the timeline.We will use good quality 
+                  and durable materials for all our constructions.We will maintain high quality documents related to our projects 
+                  and provide you those details on Demand. Currently, we are undertaking Renovation,New Building 
+                  Construction,Civil Work,Interior Desigining,Exterior Designing,Normal Houses,Apartment Buildings 
+                  and Bungalow houses. We also provide quotations,plans and estimation for government civil auctions.
+                </p>
                 <!-- <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -411,7 +408,7 @@
                     <li>Residential Building Contractors</li>
                     <li>Building Renovation Contractors</li>
                   </ol>
-                  <p class="mb-5" style="text-align: left;">
+                  <p class="mb-5" style="text-align: left;text-indent: 5em;">
                     Our Contractor service provides material, labor, equipment (such as engineering vehicles and tools) 
                     and services necessary for the construction of the project.We will build permits,
                      securing the property, providing temporary utilities on site, managing personnel on site,
@@ -496,19 +493,18 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/interior_modular_kitchen.png" alt="Interior Modular Kitchen"> -->
                 <!-- Portfolio Modal - Text -->
                 <label style="text-align:left;display:block;">Interior Design</label>
-                <p style="text-align:left">
-                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We follow seven principles and use seven elements to decorate the interior of the house.Our interior design comprises of plans, 
+                <p style="text-align:left;text-indent: 5em;">
+                     We follow seven principles and use seven elements to decorate the interior of the house.Our interior design comprises of plans, 
                     coordination and manages the entire projects.Most often, we will do conceptual development, space planning, site inspection,
                      programming researches, arranges the materials and furniture to give you a pleasant interior look.
                 </p>
                 <label style="text-align:left;display:block;">Exterior Design</label>
-                <p style="text-align:left">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We will take care of flooring, paint, and decorations suitable for outdoor.
-                    Designing your garden,deck,Swimming Pool and Car Parking.
+                <p style="text-align:left;text-indent: 5em;">
+                    We will take care of flooring, paint, and decorations suitable for outdoor.
                 </p>
                 <label style="text-align:left;display:block;">Modular Kitchen</label>
-                <p style="text-align:left">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Our Modular kitchen constitutes wooden cabinets, counter tops, internal accessories, 
+                <p style="text-align:left;text-indent: 5em;">
+                    Our Modular kitchen constitutes wooden cabinets, counter tops, internal accessories, 
                     electro eomestic gadgets like chimney, hob, built-in-oven, sink with or without drain board 
                     and in some cases a refrigerator, dishwasher or other gadgets..
                 </p>
@@ -547,18 +543,18 @@
                     <ol class="carousel-indicators">
                       <li data-target="#carouselRenovationIndicators" data-slide-to="0" class="active"></li>
                       <li data-target="#carouselRenovationIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselRenovationIndicators" data-slide-to="2"></li>
+                      <!-- <li data-target="#carouselRenovationIndicators" data-slide-to="2"></li>
                       <li data-target="#carouselRenovationIndicators" data-slide-to="3"></li>
-                      <li data-target="#carouselRenovationIndicators" data-slide-to="4"></li>
+                      <li data-target="#carouselRenovationIndicators" data-slide-to="4"></li> -->
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Building.jpg" alt="First slide">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_House.jpg" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_LivingRoom.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Interior.jpg" alt="Second slide">
                       </div>
-                      <div class="carousel-item">
+                      <!-- <div class="carousel-item">
                         <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Kitchen.jpg" alt="Third slide">
                       </div>
                       <div class="carousel-item">
@@ -566,7 +562,7 @@
                       </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="img/portfolio/Renovation/Renovation_Bathroom.jpg" alt="Fifth slide">
-                      </div>
+                      </div> -->
                     </div>
                     <a class="carousel-control-prev" href="#carouselRenovationIndicators" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -577,11 +573,25 @@
                       <span class="sr-only">Next</span>
                     </a>
                   </div>
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <p style="text-align:left;">
+                    Our Renovation works are categorised as 'structural' and 'cosmetic'.
+                <p style="text-align:left;">Structural renovation might include:</p>
+                  <ol style="text-align:left;">
+                    <li>Extensions</li>
+                    <li>Loft conversions</li>
+                    <li>Construction of a basement</li>
+                    <li>Redesign of floor plans</li>
+                    <li>Re-wiring, re-plumbing, and so on</li>
+                  </ol>
+                </p>
+                <p style="text-align:left;">Cosmetic renovation might include:</p>
+                    <ol style="text-align:left;">
+                      <li>Painting and other forms of decoration and minor repairs</li>
+                      <li>Flooring</li>
+                      <li>Updating fixtures and fittings</li>
+                      <li>Light landscaping</li>
+                    </ol>
+                </p>
               </div>
             </div>
           </div>
@@ -617,11 +627,20 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/surveying.jpg" alt="Surveying">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <p style="text-align:left;text-indent: 5em;">
+                    Our Surveying is to analyze and record the characteristics of a 
+                    land area span to help design a plan or map for construction.
+                  </p>
+                  <p style="text-align:left;text-indent: 5em;">
+                        Our Surveyor is a professional person with the academic 
+                        qualifications and technical expertise to conduct one, or more, of the following activities;
+                  </p>
+                  <ul style="text-align:left;">
+                    <li>to determine, measure and represent land, three-dimensional objects, point-fields and trajectories;</li>
+                    <li>to assemble and interpret land and geographically related information,</li>
+                    <li>to use that information for the planning and efficient administration of the land, the sea and any structures thereon; and,</li>
+                    <li>to conduct research into the above practices and to develop them.</li>
+                  </ul>
               </div>
             </div>
           </div>
@@ -656,11 +675,11 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/consulting.jpg" alt="Consulting">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <p class="mb-5" style="text-align:left;text-indent: 5em;">We provide expert advice on the design, planning and management of civil construction projects,
+                   covering all types of residential and commercial construction, particularly in the area of large,
+                    public infrastructure projects. We are also driving force behind the construction of roads, highways,
+                    bridges and public facilities.
+                </p>
               </div>
             </div>
           </div>
