Update the contact details

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Michael Xavier.G (B.TECH CIVIL),<br /> has construction experience for morethan 15 years and doing collective business with my father</p>
+          <p class="lead">Michael Xavier.G (B.TECH CIVIL),<br /> has construction experience for morethan 15 years </p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">Phone : 7374134406 <br /> Gmail : jehovahjirehces@gmail.com</p>
