--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
         
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Jehovah Jireh's</a>
+      <a class="navbar-brand js-scroll-trigger d-none d-lg-block" href="#page-top">Jehovah Jireh's - Construction & Engineering Services</a>
+
+      <a class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" href="#page-top">Jehovah Jireh's</a>
+      <a class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" href="#page-top">Construction & Engineering Services</a>
 
       <div class="text-center" style="flex:0px;">
       
@@ -194,7 +197,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Michael Xavier.G (B.TECH CIVIL),<br /> has construction experience for morethan 15 years </p>
+          <p class="lead">Michael Xavier.G (B.TECH CIVIL),<br /> has construction experience for morethan 15 years.</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">Phone : 7374134406 <br /> Gmail : jehovahjirehces@gmail.com</p>
