--- a/index.html
+++ b/index.html
@@ -198,10 +198,18 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Michael Xavier.G (B.TECH CIVIL),<br /> has construction experience for morethan 15 years.</p>
+          <p class="lead">Mr. Michael Xavier (B.Tech in Civil),<br /> 16 years experience in construction field includes Middle East Countries.
+            <br />JEHOVAH JIREH'S Construction & Engineering Services are established in the year of 2019.
+            <br />Phone : 7374134406 <br /> Gmail : jehovahjirehces@gmail.com
+          </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Phone : 7374134406 <br /> Gmail : jehovahjirehces@gmail.com</p>
+                    <ul>
+            <li>We are focusing good quality and provide innovative design in reasonable price</li>              
+            <li>We are doing individual villas,apartments,all types of residential and commercial buildings</li>              
+            <li>We are doing construction works in Chennai,Nagercoil and all over in Tamil Nadu</li>              
+          </ul>
+        
         </div>
       </div>
 
