Moto Text Changes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <!-- Masthead Subheading -->
       <p class="masthead-subheading font-weight-light mb-0"><h2>ஆண்டவரே, வீட்டைக் கட்டினாலொழிய, அதைக் கட்டுபவர்களின் உழைப்பெல்லாம் வீணே</h1></p>
       <p class="masthead-subheading font-weight-light mb-0"><h3>(சங்கீதம் 127:1)</h3></p>
-      <p class="masthead-subheading font-weight-light mb-0"><h5>We fear for God and do what is right for HIM. So, We will not hesitate and approach for our Business Growth</h5></p>
+      <p class="masthead-subheading font-weight-light mb-0"><h5>We fear God and work honestly.So do not hesitate and approach your construction needs.</h5></p>
     </div>
   </header>
 
