--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
   <link href="css/hebrew.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 </head>
 
@@ -25,16 +26,11 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
-        
-      <a class="navbar-brand js-scroll-trigger d-none d-lg-block" href="#page-top">Jehovah Jireh's - Construction & Engineering Services</a>
-
-      <a class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" href="#page-top">Jehovah Jireh's</a>
-      <a class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" href="#page-top">Construction & Engineering Services</a>
-
+        <img class="navbar-brand js-scroll-trigger d-none d-lg-block" src="img/portfolio/Logo.jpg" alt="Logo">
+      <!-- <a class="navbar-brand js-scroll-trigger d-none d-lg-block" href="#page-top">Jehovah Jireh's - Construction & Engineering Services</a> -->
+      <img class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" style="width: 50%;height: 50%;" src="img/portfolio/Logo.jpg" alt="Logo">
       <div class="text-center" style="flex:0px;">
-      
           <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
-  
       </div>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -839,25 +835,34 @@
 <!-- Container for the image gallery -->
 <div class="container">
 
-  <!-- Full-width images with number text -->
+  <div class="w3-content w3-display-container">
+    <img class="mySlides" src="img/portfolio/Projects/Kaaranai_Project_1_Pic1.jpg" style="width:100%;max-height: 450px;" >
+    <img class="mySlides" src="img/portfolio/Projects/Kovoor_Project_1_Pic1.jpg" style="width:100%;max-height: 450px;">
+    <img class="mySlides" src="img/portfolio/Projects/Nagercoil_Project_1_Pic1.jpg" style="width:100%;max-height: 450px;">
+    <img class="mySlides" src="img/portfolio/Projects/Nagercoil_Project_1_Pic2.jpg" style="width:100%;max-height: 450px;">
+  
+    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+    <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+  </div>
+  <!-- Full-width images with number text
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
-      <img src="img/portfolio/Projects/Kaaranai_Project_1_Pic1.jpg" style="width:100%">
+      <img src="" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
-      <img src="img/portfolio/Projects/Kovoor_Project_1_Pic1.jpg" style="width:100%">
+      <img src="" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 6</div>
-      <img src="img/portfolio/Projects/Nagercoil_Project_1_Pic1.jpg" style="width:100%">
+      <img src="" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
-      <img src="img/portfolio/Projects/Nagercoil_Project_1_Pic2.jpg" style="width:100%">
+      <img src="" style="width:100%">
   </div>
 
   <div class="mySlides">
@@ -871,36 +876,7 @@
   </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <!-- Image text -->
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
-
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="img/portfolio/Projects/Kaaranai_Project_1_Pic1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img/portfolio/Projects/Kovoor_Project_1_Pic1.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img/portfolio/Projects/Nagercoil_Project_1_Pic1.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img/portfolio/Projects/Nagercoil_Project_1_Pic2.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img/portfolio/Projects/Nagercoil_Project_2_Pic1.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="img/portfolio/Projects/Nagercoil_Project_2_Pic1.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-    </div>
-  </div>
-</div>
+  
                      <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/Projects/Nagercoil_Project_1_Pic1.jpg" alt="Nagercoil Pr1 Pc2"> -->
                   <!-- Portfolio Modal - Text -->
                   <p class="mb-5" style="text-align:left;text-indent: 5em;"><b>Gnana Siga Mani Katarin Ammal</b> - Nagercoil
