--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
-        <img class="navbar-brand js-scroll-trigger d-none d-lg-block" src="img/portfolio/Logo.jpg" alt="Logo">
+        <img class="navbar-brand js-scroll-trigger d-none d-lg-block" src="img/portfolio/logo.jpg" alt="Logo">
       <!-- <a class="navbar-brand js-scroll-trigger d-none d-lg-block" href="#page-top">Jehovah Jireh's - Construction & Engineering Services</a> -->
-      <img class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" style="width: 50%;height: 50%;" src="img/portfolio/Logo.jpg" alt="Logo">
+      <img class="navbar-brand js-scroll-trigger d-block d-sm-none hd-sm-block" style="width: 50%;height: 50%;" src="img/portfolio/logo.jpg" alt="Logo">
       <div class="text-center" style="flex:0px;">
           <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
       </div>
