--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
                 <p class="modalPara header"><b>Mr.Balaji</b> - <I>Mudichur</I>
                   <p class="modalPara">
                     Jehovah Jireh's were able to fulfill the ambition of my need with innovation and excellent skills.
-                    They are creating designs for modern days buildings with minimum charges.
+                    They are creating good designs for buildings with minimum charges.
                   </p>
                 </p>
               </div>
