--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
 
         <!-- Portfolio Item 13 -->
-        <div class="col-md-6 col-lg-4">
+        <!-- <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal13">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -292,7 +292,7 @@
             </div>
             <img class="img-fluid projects" src="img/portfolio/Projects/Kaaranai_Project_1_Pic1.jpg" alt="Consulting">
           </div>
-        </div>
+        </div> -->
         <!-- Portfolio Item 14 -->
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal14">
@@ -311,6 +311,44 @@
     </div>
   </section>
 
+    <!-- Offers Section -->
+  <section class="page-section portfolio" id="offers">
+    <div class="container">
+
+      <!-- Offers Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Quotations</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-star"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- Portfolio Grid Items -->
+      <div class="row">
+
+        <!-- Portfolio Item 16 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal16">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid projects" src="img/portfolio/Offers/Banner_Offer.jpg"
+              alt="Offers">
+          </div>
+        </div>   
+      </div>
+      <!-- /.row -->
+
+    </div>
+  </section>
+  <marquee>Interior Offers : living room interior work will be taken care for constructing below 900 sqft and living
+    room and one bedroom interior work for above 900 sqft.</marquee>
   <!-- About Section -->
   <section class="page-section bg-primary text-white mb-0" id="about">
     <div class="container">
@@ -1250,7 +1288,7 @@
     </div>
   </div>
   <!-- Portfolio Modal 13 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog"
+  <!-- <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog"
     aria-labelledby="portfolioModal13Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
@@ -1262,19 +1300,19 @@
         <div class="modal-body text-center">
           <div class="container">
             <div class="row justify-content-center">
-              <div class="col-lg-8">
+              <div class="col-lg-8"> -->
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Current Project</h2>
+                <!-- <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Current Project</h2> -->
                 <!-- Icon Divider -->
-                <div class="divider-custom">
+                <!-- <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
                     <i class="fas fa-star"></i>
                   </div>
                   <div class="divider-custom-line"></div>
-                </div>
+                </div> -->
                 <!-- Portfolio Modal - Image -->
-                <div id="carouselProjectIndicators_7" class="carousel slide" data-ride="carousel">
+                <!-- <div id="carouselProjectIndicators_7" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselProjectIndicators_7" data-slide-to="0" class="active"></li>
                   </ol>
@@ -1301,7 +1339,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
     <!-- Portfolio Modal 14 -->
     <div class="portfolio-modal modal fade" id="portfolioModal14" tabindex="-1" role="dialog"
     aria-labelledby="portfolioModal14Label" aria-hidden="true">
@@ -1363,6 +1401,86 @@
       </div>
     </div>
   </div>
+      <!-- Portfolio Modal 16 -->
+      <div class="portfolio-modal modal fade" id="portfolioModal16" tabindex="-1" role="dialog"
+      aria-labelledby="portfolioModal16Label" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+          <div class="modal-body text-center">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-8">
+                  <!-- Portfolio Modal - Title -->
+                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Quotation Details</h2>
+                  <!-- Icon Divider -->
+                  <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                      <i class="fas fa-star"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+                  <!-- Portfolio Modal - Image -->
+                  <div id="carouselProjectIndicators_10" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselProjectIndicators_10" data-slide-to="0" class="active"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100 rounded mySlides img"
+                          src="img/portfolio/Offers/Banner_Offer.jpg" alt="First slide">
+                      </div>                      
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselProjectIndicators_10" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselProjectIndicators_10" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                  <p class="modalPara header"><b>Quotation Details</b>
+                    <p class="modalPara">
+                      All the mentioned prices listed inside the documents might get increase/decrease 
+                      due to material price changing day by day.
+                    </p>
+                  </p>
+                                       <Table>
+                      <thead>
+                        <th>Luxury</th>
+                        <th>Premium</th>
+                        <th>Standard</th>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>
+                            <a href="img/portfolio/Pdf/Luxury_Quotation.pdf" download="Luxury" target="blank">
+                              <img src="img/portfolio/icons8-pdf-48.png" alt="Luxury" >Download
+                            </a>
+                          </td>
+                        <td><a href="img/portfolio/Pdf/Premium_Quotation.pdf" download="Luxury" target="blank">
+                          <img src="img/portfolio/icons8-pdf-48.png" alt="Luxury" >Download
+                        </a></td>
+                        <td><a href="img/portfolio/Pdf/Standard_Quotation.pdf" download="Luxury" target="blank">
+                          <img src="img/portfolio/icons8-pdf-48.png" alt="Luxury" >Download
+                        </a></td>
+                        </tr>
+                      </tbody>
+                    </Table>
+
+                                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
