Download Name Changes

--- a/index.html
+++ b/index.html
@@ -1464,10 +1464,10 @@
                               <img src="img/portfolio/icons8-pdf-48.png" alt="Luxury" >Download
                             </a>
                           </td>
-                        <td><a href="img/portfolio/Pdf/Premium_Quotation.pdf" download="Luxury" target="blank">
+                        <td><a href="img/portfolio/Pdf/Premium_Quotation.pdf" download="Premium" target="blank">
                           <img src="img/portfolio/icons8-pdf-48.png" alt="Luxury" >Download
                         </a></td>
-                        <td><a href="img/portfolio/Pdf/Standard_Quotation.pdf" download="Luxury" target="blank">
+                        <td><a href="img/portfolio/Pdf/Standard_Quotation.pdf" download="Standard" target="blank">
                           <img src="img/portfolio/icons8-pdf-48.png" alt="Luxury" >Download
                         </a></td>
                         </tr>
